syntax = "proto3";

package common.v1;

option go_package = "github.com/Doremi203/couply/backend/matcher/gen/api/common/v1";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "validate/validate.proto";

enum Goal {
  GOAL_UNSPECIFIED = 0;
  GOAL_DATING = 1;
  GOAL_RELATIONSHIP = 2;
  GOAL_FRIENDSHIP = 3;
  GOAL_JUST_CHATTING = 4;
}

enum Zodiac {
  ZODIAC_UNSPECIFIED = 0;
  ZODIAC_ARIES = 1;
  ZODIAC_TAURUS = 2;
  ZODIAC_GEMINI = 3;
  ZODIAC_CANCER = 4;
  ZODIAC_LEO = 5;
  ZODIAC_VIRGO = 6;
  ZODIAC_LIBRA = 7;
  ZODIAC_SCORPIO = 8;
  ZODIAC_SAGITTARIUS = 9;
  ZODIAC_CAPRICORN = 10;
  ZODIAC_AQUARIUS = 11;
  ZODIAC_PISCES = 12;
}

enum Education {
  EDUCATION_UNSPECIFIED = 0;
  EDUCATION_SECONDARY = 1;
  EDUCATION_HIGHER = 2;
  EDUCATION_PHD = 3;
}

enum Children {
  CHILDREN_UNSPECIFIED = 0;
  CHILDREN_NO = 1;
  CHILDREN_NOT_YET = 2;
  CHILDREN_YES = 3;
}

enum Alcohol {
  ALCOHOL_UNSPECIFIED = 0;
  ALCOHOL_NEGATIVELY = 1;
  ALCOHOL_NEUTRALLY = 2;
  ALCOHOL_POSITIVELY = 3;
}

enum Smoking {
  SMOKING_UNSPECIFIED = 0;
  SMOKING_NEGATIVELY = 1;
  SMOKING_NEUTRALLY = 2;
  SMOKING_POSITIVELY = 3;
}

message Interest {
  repeated Sport sport = 1 [ // Спорт
    (validate.rules).repeated.items.enum.defined_only = true
  ];
  repeated SelfDevelopment self_development = 2 [ // Саморазвитие
    (validate.rules).repeated.items.enum.defined_only = true
  ];
  repeated Hobby hobby = 3 [ // Хобби
    (validate.rules).repeated.items.enum.defined_only = true
  ];
  repeated Music music = 4 [ // Музыка
    (validate.rules).repeated.items.enum.defined_only = true
  ];
  repeated MoviesTV movies_tv = 5 [ // Кино и ТВ
    (validate.rules).repeated.items.enum.defined_only = true
  ];
  repeated FoodDrink food_drink = 6 [ // Еда и напитки
    (validate.rules).repeated.items.enum.defined_only = true
  ];
  repeated PersonalityTraits personality_traits = 7 [ // Черты характера
    (validate.rules).repeated.items.enum.defined_only = true
  ];
  repeated Pets pets = 8 [ // Домашние животные
    (validate.rules).repeated.items.enum.defined_only = true
  ];
}

enum Sport {
  SPORT_UNSPECIFIED = 0;
  SPORT_GYM = 1;             // Тренажерный зал
  SPORT_RUNNING = 2;          // Бег
  SPORT_YOGA = 3;             // Йога
  SPORT_SWIMMING = 4;         // Плавание
  SPORT_CYCLING = 5;          // Велоспорт
  SPORT_TENNIS = 6;           // Теннис
  SPORT_BASKETBALL = 7;       // Баскетбол
  SPORT_HIKING = 8;           // Походы
  SPORT_DANCING = 9;          // Танцы
  SPORT_MARTIAL_ARTS = 10;    // Боевые искусства
  SPORT_FOOTBALL = 11;        // Футбол
  SPORT_SKIING = 12;          // Лыжи/Сноуборд
  SPORT_CLIMBING = 13;        // Скалолазание
}

enum SelfDevelopment {
  SELFDEVELOPMENT_UNSPECIFIED = 0;
  SELFDEVELOPMENT_LANGUAGES = 1;    // Изучение языков
  SELFDEVELOPMENT_LECTURES = 2;     // Лекции
  SELFDEVELOPMENT_ONLINE_COURSES = 3; // Онлайн-курсы
  SELFDEVELOPMENT_SELF_EDUCATION = 4; // Самообразование
  SELFDEVELOPMENT_MEDITATION = 5;   // Медитация
  SELFDEVELOPMENT_PSYCHOLOGY = 6;   // Психология
  SELFDEVELOPMENT_PHILOSOPHY = 7;   // Философия
  SELFDEVELOPMENT_HISTORY = 8;      // История
  SELFDEVELOPMENT_TECHNOLOGY = 9;   // Технологии
  SELFDEVELOPMENT_READING = 10;     // Чтение
}

enum Hobby {
  HOBBY_UNSPECIFIED = 0;
  HOBBY_PHOTOGRAPHY = 1;      // Фотография
  HOBBY_PAINTING = 2;         // Рисование
  HOBBY_BOARDGAMES = 3;       // Настольные игры
  HOBBY_READING = 4;          // Чтение
  HOBBY_COOKING = 5;          // Готовка
  HOBBY_GARDENING = 6;        // Садоводство
  HOBBY_TRAVEL = 7;           // Путешествия
  HOBBY_WRITING = 8;          // Писательство
  HOBBY_CHESS = 9;            // Шахматы
  HOBBY_CRAFTS = 10;          // Рукоделие/DIY
  HOBBY_ANIMALS = 11;         // Уход за животными
  HOBBY_ASTROLOGY = 12;       // Астрология
}

enum Music {
  MUSIC_UNSPECIFIED = 0;
  MUSIC_POP = 1;              // Поп-музыка
  MUSIC_ROCK = 2;             // Рок
  MUSIC_HIPHOP = 3;           // Хип-хоп
  MUSIC_RAP = 4;              // Рэп
  MUSIC_ELECTRONIC = 5;       // Электронная
  MUSIC_JAZZ = 6;             // Джаз
  MUSIC_CLASSICAL = 7;        // Классическая
  MUSIC_INDIE = 8;            // Инди
  MUSIC_RNB = 9;              // R&B
  MUSIC_METAL = 10;            // Метал
  MUSIC_FOLK = 11;            // Фолк
  MUSIC_COUNTRY = 12;         // Кантри
  MUSIC_ALTERNATIVE = 13;     // Альтернатива
}

enum MoviesTV {
  MOVIESTV_UNSPECIFIED = 0;
  MOVIESTV_ACTION = 1;         // Боевики
  MOVIESTV_COMEDY = 2;         // Комедии
  MOVIESTV_DRAMA = 3;          // Драмы
  MOVIESTV_SCIFI = 4;          // Научная фантастика
  MOVIESTV_ANIME = 5;          // Аниме
  MOVIESTV_DOCUMENTARIES = 6;  // Документалки
  MOVIESTV_HORROR = 7;         // Ужасы
  MOVIESTV_FANTASY = 8;        // Фэнтези
  MOVIESTV_THRILLER = 9;       // Триллеры
  MOVIESTV_ROMANCE = 10;       // Мелодрамы
  MOVIESTV_HISTORICAL = 11;    // Исторические
}

enum FoodDrink {
  FOODDRINK_UNSPECIFIED = 0;
  FOODDRINK_COFFEE = 1;        // Кофе
  FOODDRINK_WINE = 2;          // Вино
  FOODDRINK_COCKTAILS = 3;     // Коктейли
  FOODDRINK_VEGAN = 4;         // Веганство
  FOODDRINK_BAKING = 5;        // Выпечка
  FOODDRINK_FINE_DINING = 6;   // Рестораны
  FOODDRINK_STREET_FOOD = 7;   // Уличная еда
  FOODDRINK_TEA = 8;           // Чайные церемонии
  FOODDRINK_BARBECUE = 9;      // Шашлыки/Гриль
  FOODDRINK_CRAFT_BEER = 10;   // Крафтовое пиво
}

enum PersonalityTraits {
  TRAIT_UNSPECIFIED = 0;
  TRAIT_INTROVERT = 1;         // Интроверт
  TRAIT_EXTROVERT = 2;         // Экстраверт
  TRAIT_ADVENTUROUS = 3;       // Авантюрист
  TRAIT_HOMEBODY = 4;          // Домосед
  TRAIT_OPTIMIST = 5;          // Оптимист
  TRAIT_AMBITIOUS = 6;         // Амбициозный
  TRAIT_CREATIVE = 7;          // Творческий
  TRAIT_EMPATHIC = 8;          // Эмпат
  TRAIT_ANALYTICAL = 9;        // Аналитик
  TRAIT_SARCASM = 10;          // Саркастичность
}

enum Pets {
  PETS_UNSPECIFIED = 0;
  PETS_DOGS = 1;               // Собаки
  PETS_CATS = 2;               // Кошки
  PETS_OTHER = 3;              // Другие питомцы
  PETS_NONE = 4;               // Без питомцев
}